syntax = "proto3";

package ServerStreaming;

option go_package="ServerStreaming/videoStreaming/proto";

message VideoName {
  string video_name = 1;
}

message StreamRequest {
  VideoName stream = 1;
}

message StreamResponse {
  string result = 1;
}

service StreamService {
  rpc Stream(StreamRequest) returns (stream StreamResponse) {};
}